GitHub Actions first workflow check-in

--- a/.github/workflows/jacoco-coverage.yml
+++ b/.github/workflows/jacoco-coverage.yml
@@ -39,6 +39,7 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         run: |
           ls -ltra badges/
+          cat badges/coverage-summary.json
           sudo chmod +x badges/coverage-summary.json
           REPORT=$(badges/coverage-summary.json)
           COVERAGE=$(jq -r '.coverage' <<< "$REPORT")%
