--- a/.github/workflows/jacoco-coverage.yml
+++ b/.github/workflows/jacoco-coverage.yml
@@ -42,7 +42,7 @@ jobs:
           #cat badges/coverage-summary.json
           #sudo chmod +x badges/coverage-summary.json
           cd badges
-          REPORT=$(coverage-summary.json)
+          REPORT=`cat coverage-summary.json`
           COVERAGE=$(jq -r '.coverage' <<< "$REPORT")%
           BRANCHES=$(jq -r '.branches' <<< "$REPORT")%
           NEWLINE=$'\n'
