--- a/.github/workflows/jacoco-coverage.yml
+++ b/.github/workflows/jacoco-coverage.yml
@@ -38,8 +38,7 @@ jobs:
       - name: Comment on PR with coverage percentages
         if: ${{ github.event_name == 'pull_request' }}
         run: |
-          cd badges
-          REPORT=`cat coverage-summary.json`
+          REPORT=`cat badges/coverage-summary.json`
           COVERAGE=$(jq -r '.coverage' <<< "$REPORT")%
           BRANCHES=$(jq -r '.branches' <<< "$REPORT")%
           NEWLINE=$'\n'
