--- a/.github/workflows/jacoco-coverage.yml
+++ b/.github/workflows/jacoco-coverage.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Comment on PR with coverage percentages
         if: ${{ github.event_name == 'pull_request' }}
         run: |
-          gh pr comment ${{github.event.pull_request.number}} --body "Hedo JaCoCo Test Coverage Summary Statistics"
+          gh pr comment ${{github.event.pull_request.number}} --body "Hedo SAI JaCoCo Test Coverage Summary Statistics"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
