--- a/.github/workflows/jacoco-coverage.yml
+++ b/.github/workflows/jacoco-coverage.yml
@@ -10,20 +10,30 @@ on:
 jobs:
   build:
     permissions:
-      contents: 'read'
+      contents: 'write'
       id-token: 'write'
       issues: 'write'
     
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Checkout badges branch to a badges directory nested inside first checkout
+        uses: actions/checkout@v2
         with:
-          distribution: 'temurin'
+          ref: badges
+          path: badges
+        
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
           java-version: '17'
+          
       - name: Run Coverage
         run: mvn -B package -Pcoverage
+        
       - name: Generate JaCoCo badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
@@ -31,15 +41,18 @@ jobs:
           badges-directory: badges
           generate-branches-badge: true
           generate-summary: true
+      
       - name: Log coverage percentages to workflow output
         run: |
           echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
           echo "branches = ${{ steps.jacoco.outputs.branches }}"
+      
       - name: Upload JaCoCo coverage report as a workflow artifact
         uses: actions/upload-artifact@v2
         with:
           name: jacoco-report
           path: target/site/jacoco/
+      
       - name: Comment on PR with coverage percentages
         if: ${{ github.event_name == 'pull_request' }}
         run: |
