--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+#cloud.aws.region.static=us-east-1
+#cloud.aws.credentials.accessKey=AKIA4SNHF4VLWV77NOFY
+#cloud.aws.credentials.secretKey=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
 
